2025-11-11  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* texmf.cnf: doc tweaks.

2025-07-20  Karl Berry  <karl@freefriends.org>

	* tests/cnfnlink.test: forgot to export TEXINPUTS.

2025-07-17  Karl Berry  <karl@freefriends.org>

	* NEWS: let's completely disable the st_nlink check by default.
	* doc/kpathsea.texi (Subdirectory expansion): document this.
	* elt-dirs.c (do_subdir): change name to texmf_nlink_for_leaf,
	for consistency with texmf_casefold_search.
	* tests/cnfnlink.test: change name; doc.
	* texmf.cnf (texmf_nlink_for_leaf): change name, and set to 0
	to disable the check.

2025-07-15  Karl Berry  <karl@freefriends.org>

	* c-std.h (getenv) [! HAVE_STDLIB_H]: remove declaration, 
	since evince (et al.?) don't bother to check for <stdlib.h>,
	and C23 broke () declarations.
	https://tug.org/pipermail/tex-live/2025-July/051609.html
	-> https://bugs.debian.org/1109256

2025-07-13  Karl Berry  <karl@freefriends.org>

	* lib.h (kpse_cnf_p): declare new fn.
	* cnf.c (kpse_cnf_p): define it.
	* pathsearch.c,
	* tex-file.c: change calls from KPSE_CNF_P macro to this new fn,
	to avoid multiple evaluations of the argument and hence useless
	multiple debugging lines.

2025-07-13  Karl Berry  <karl@freefriends.org>

	* elt-dirs.c (do_subdir) [ST_NLINK_TRICK]: if new cnf variable
	kpse_ignore_nlink_for_leaf is true, never mind the st_nlink=2
	trick for checking if we're in a leaf directory. Useful because
	overlay filesystems can lie about st_nlink:
	  https://tug.org/pipermail/texhax/2025-July/026771.html
	And also when an apparent leaf directory contains symlinks to
	other directories:
	  https://tex.stackexchange.com/questions/132908
	[KPSE_DEBUG]: add and tweak debugging output.
	* NEWS: mention this.
	* doc/kpathsea.texi (Subdirectory expansion, Unable to find files):
	mention new workaround of setting kpse_ignore_nlink_for_leaf=1.
	* texmf.cnf (kpse_ignore_nlink_for_leaf): commented-out setting.
	* tests/cnfnlink.test: new test.